fix: remove overflow hidden from modal

--- a/src/components/atoms/modal.module.css
+++ b/src/components/atoms/modal.module.css
@@ -4,7 +4,6 @@
     max-width: calc(100vw - var(--ye-spacing-rem-normal) * 2);
     margin: auto;
     padding: var(--ye-spacing-rem-normal);
-    overflow: hidden;
     background: var(--ye-color-background);
     border-radius: var(--ye-radius-normal);
   }
